--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "한글 다듬기",
+    "name": "Korean Polisher",
     "version": "1.0",
     "description": "Korean Polisher",
     "permissions": [
