--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,56 @@
-gluonnlp == 0.9.1
-mxnet == 1.6.0
-onnxruntime == 1.5.2
-sentencepiece >= 0.1.85
-torch == 1.5.0
-transformers == 2.11.0
+absl-py==0.11.0
+aiofiles==0.6.0
+cachetools==4.2.0
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Cython==0.29.21
+filelock==3.0.12
+fsspec==0.8.5
+future==0.18.2
+gluonnlp==0.10.0
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+graphviz==0.8.4
+grpcio==1.34.0
+h11==0.9.0
+httpcore==0.11.1
+httptools==0.1.1
+httpx==0.15.4
+idna==2.10
+joblib==1.0.0
+Markdown==3.3.3
+multidict==5.1.0
+mxnet==1.7.0.post1
+numpy==1.19.4
+oauthlib==3.1.0
+packaging==20.8
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytorch-lightning==1.1.2
+PyYAML==5.3.1
+regex==2020.11.13
+requests==2.25.1
+requests-oauthlib==1.3.0
+rfc3986==1.4.0
+rsa==4.6
+sacremoses==0.0.43
+sanic==20.12.0
+Sanic-Cors==0.10.0.post3
+Sanic-Plugins-Framework==0.9.4.post1
+six==1.15.0
+sniffio==1.2.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tokenizers==0.9.4
+torch==1.7.1
+tqdm==4.55.0
+transformers==4.1.1
+typing-extensions==3.7.4.3
+ujson==4.0.1
+urllib3==1.26.2
+uvloop==0.14.0
+websockets==8.1
+Werkzeug==1.0.1
